--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -240,7 +240,7 @@ PROV1117;Sanandaj;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
 PROV673;Cahul;;;;;;;;;;;;;
 PROV3286;Steinamanger;;;;;;;;;;;;;
-PROV2638;Zabul;;;;;;;;;;;;;
+PROV2638;Nosratabad;;;;;;;;;;;;;
 PROV2643;Hajjiabad;;;;;;;;;;;;;
 PROV3258;Kech;;;;;;;;;;;;;
 PROV1210;Faizabad;;;;;;;;;;;;;
