--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9479,7 +9479,7 @@ PROV1109;Khvoy;Khvoy;Khvoy;;Jvoy;;;;;;;;;
 PROV1111;Sablagh;Sablagh;Sablagh;;Sablagh;;;;;;;;;
 PROV1112;Ardabil;Ardabil;Ardabil;;Ardebil;;;;;;;;;
 PROV1113;Rasht;Rasht;Rasht;;Rasht;;;;;;;;;
-PROV1114;Noshehr;Noshehr;Noshehr;;Noshehr;;;;;;;;;
+PROV1114;Habibabad;Noshehr;Noshehr;;Noshehr;;;;;;;;;
 PROV1115;Barforush;Barforush;Barforush;;Barforush;;;;;;;;;
 PROV1120;Khoramabad;Khoramabad;Khoramabad;;Khoramabad;;;;;;;;;
 PROV1121;Tehran;Tehéran;Teheran;;Tehrán;;;;;;;;;
@@ -9493,7 +9493,7 @@ PROV1128;Arak;Arak;Arak;;Arak;;;;;;;;;
 PROV1129;Kashan;Kashan;Kashan;;Kashan;;;;;;;;;
 PROV1130;Yazd;Yazd;Yazd;;Yazd;;;;;;;;;
 PROV1131;Ahvaz;Ahvaz;Ahvaz;;Ahvaz;;;;;;;;;
-PROV1132;Abadan;Abadan;Abadan;;Âbâdân;;;;;;;;;
+PROV1132;'Abbadan;Abadan;Abadan;;Âbâdân;;;;;;;;;
 PROV1133;Dezful;Dezful;Dezful;;Dezful;;;;;;;;;
 PROV1134;Dehkord;Dehkord;Dehkord;;Dehkord;;;;;;;;;
 PROV1135;Shiraz;Shiraz;Shiraz;;Shîrâz;;;;;;;;;
