--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -8,7 +8,7 @@ PROV2462;Kreie-bang-rê;;;;;;;;;
 PROV2457;Curityba;;;;;;;;;
 PROV2420;Punta Porá;;;;;;;;;
 PROV3556;Litani;;;;;;;;;
-PROV3560;Durango;;;;;;;;;
+PROV3560;Kahpota;;;;;;;;;
 PROV3567;Marabitanas;;;;;;;;;
 PROV3444;Mantiqueira;;;;;;;;;
 PROV2402;Uatumã;;;;;;;;;
@@ -119,19 +119,19 @@ PROV2342;Villarrica;;;;;;;;;
 PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
 PROV4093;Purrán;;;;;;;;;
-PUR;Purrán;;;;;;;;;
-PUR_ADJ;Purrán;;;;;;;;;
+PUR;Purran;;;;;;;;;
+PUR_ADJ;Tshoneka;;;;;;;;;
 LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
-MZN;Calefú;;;;;;;;;
-MZN_ADJ;Calefú;;;;;;;;;
+MZN;Caleufú;;;;;;;;;
+MZN_ADJ;Manzanache;;;;;;;;;
 YAN;Yaqui;;;;;;;;;
 YAN_ADJ;Yaqui;;;;;;;;;
-RAN;Ranquel;;;;;;;;;
+RAN;The Ranquel Ulmanate;;;;;;;;;
 RAN_ADJ;Ranquel;;;;;;;;;
-SLN;Salinas;;;;;;;;;
-SLN_ADJ;Salinas;;;;;;;;;
-PROV4089;Calefú;;;;;;;;;
+SLN;Salinas Grandes;;;;;;;;;
+SLN_ADJ;Borogan;;;;;;;;;
+PROV4089;Caleufú;;;;;;;;;
 PROV4090;Cochamó;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
