--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2380,9 +2380,12 @@ UIL_socialist;Socialist Party;;;;;;;;;;;;;
 UIL_communist;Industrial Workers of the World;;;;;;;;;;;;;
 UIL_fascist;Supremacy Party;;;;;;;;;;;;;
 UNB;The Colorado Republic;;;;;;;;;;;;;
-UNB_absolute_monarchy;The Kingdom of Colorado;;;;;;;;;;;;;
-UNB_prussian_constitutionalism;The Kingdom of Colorado;;;;;;;;;;;;;
-UNB_hms_government;The Colorado Commonwealth;;;;;;;;;;;;;
+UNB_absolute_monarchy;Tsitsista;;;;;;;;;;;;;
+UNB_absolute_monarchy_ADJ;Tsêhéstâhese;;;;;;;;;;;;;
+UNB_prussian_constitutionalism;Tsitsista;;;;;;;;;;;;;
+UNB_prussian_constitutionalism_ADJ;Tsêhéstâhese;;;;;;;;;;;;;
+UNB_hms_government;Tsitsista;;;;;;;;;;;;;
+UNB_hms_government_ADJ;Tsêhéstâhese;;;;;;;;;;;;;
 UNB_ADJ;Coloradan;;;;;;;;;;;;;
 UNB_reactionary;Colorado Party;;;;;;;;;;;;;
 UNB_conservative;New Democratic Party;;;;;;;;;;;;;
@@ -4301,3 +4304,7 @@ TRI_constitutional_empire;Tripoli;;;;;;;;;;;;;
 TRI_constitutional_empire_ADJ;Tripolitanian;;;;;;;;;;;;;
 TRI_democracy;Tripolitanian Republic;;;;;;;;;;;;;
 TRI_democracy_ADJ;Tripolitanian;;;;;;;;;;;;;
+CRW;Crow;;;;;;;;;;;;;
+CRW_ADJ;Apsáalooke;;;;;;;;;;;;;
+PAW;Pawnee;;;;;;;;;;;;;
+PAW_ADJ;Chatiks;;;;;;;;;;;;;
