--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -371,7 +371,7 @@ PROV157;Fort Ripley;;;;;;;;;;;;;
 PROV92;Kullyspell;;;;;;;;;;;;;
 PROV93;Fort Hall;;;;;;;;;;;;;
 PROV123;Fort Robidoux;;;;;;;;;;;;;
-PROV124;Bordeaux's Post;;;;;;;;;;;;;
+PROV124;Masikota;;;;;;;;;;;;;
 PROV125;Fontenelle's Post;;;;;;;;;;;;;
 PROV126;Hujé Tan'ga;;;;;;;;;;;;;
 PROV127;'Gúhàle;;;;;;;;;;;;;
@@ -389,7 +389,7 @@ PROV131;Tusohokwehunu'bi;;;;;;;;;;;;;
 PROV130;Tha'tse Mathi';;;;;;;;;;;;;
 PROV111;Fort Bonneville;;;;;;;;;;;;;
 PROV112;Fort Laramie;;;;;;;;;;;;;
-PROV106;Bent's Fort;;;;;;;;;;;;;
+PROV106;Vétaneo'hé'e;;;;;;;;;;;;;
 PROV2702;Alty-Kuduk;;;;;;;;;;;;;
 PROV686;Merv;;;;;;;;;;;;;
 BUR_1334;Mandalay;;;;;;;;;;;;;
@@ -852,7 +852,7 @@ PROV2630;Vostochnaya;;;;;;;;;;;;;
 PROV2;Saint Dionysius;;;;;;;;;;;;;
 PROV1;Novoarkhangelsk;;;;;;;;;;;;;
 PROV107;Sierra Madre;;;;;;;;;;;;;
-PROV108;Gran Mesa;;;;;;;;;;;;;
+PROV108;Yapudttka;;;;;;;;;;;;;
 PROV104;Yerba Buena;;;;;;;;;;;;;
 PROV2146;D.C.;;;;;;;;;;;;;
 PROV2148;Halona Idiwan’a;;;;;;;;;;;;;
@@ -906,7 +906,7 @@ AUS_625;Böhmen;;;;;;;;;;;;;
 AUS_626;Mähren;;;;;;;;;;;;;
 PROV84;Sacramento;;;;;;;;;;;;;
 PROV86;Sierra Nevada;;;;;;;;;;;;;
-PROV98;San Pedro;;;;;;;;;;;;;
+PROV98;Pi'aroiyabi;;;;;;;;;;;;;
 PROV23;Fort McMurray;;;;;;;;;;;;;
 PROV27;Edmonton;;;;;;;;;;;;;
 PROV31;Black Lake;;;;;;;;;;;;;
@@ -920,8 +920,8 @@ PROV2137;Cuquieratzi;;;;;;;;;;;;;
 PROV2143;Chihuahua;;;;;;;;;;;;;
 PROV2147;Kú’ne Tsá;;;;;;;;;;;;;
 PROV2171;Zihuatenejo;;;;;;;;;;;;;
-PROV103;Pueblo;;;;;;;;;;;;;
-PROV109;Cresto Cimarrón;;;;;;;;;;;;;
+PROV103;Säretika;;;;;;;;;;;;;
+PROV109;Oivimána;;;;;;;;;;;;;
 PROV105;Tukumakuru;;;;;;;;;;;;;
 PROV218;Wheeling;;;;;;;;;;;;;
 PROV217;Green Bank;;;;;;;;;;;;;
@@ -1390,11 +1390,13 @@ PROV4041;Columbus;;;;;;;;;;;;;
 PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
+PROV4055;Sahpeech;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
 PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
 PROV4061;Yritila;;;;;;;;;;;;;
 PROV4062;Wohihu;;;;;;;;;;;;;
 PROV4063;Nanatsoho;;;;;;;;;;;;;
+PROV4064;Ho'néoxheóvaestse;;;;;;;;;;;;;
 PROV4065;Thóqàhyòp;;;;;;;;;;;;;
 PROV4077;Nacaxtlán;;;;;;;;;;;;;
 PROV4078;Chunhuhub;;;;;;;;;;;;;
@@ -1408,3 +1410,4 @@ PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
+PROV4102;Nanwuine'nan;;;;;;;;;;;;;
