--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1666,7 +1666,7 @@ MEX_85_2;California Central;;;;;;;;;;;;;
 PROV3456;Cuk Do'ag;;;;;;;;;;;;;
 PROV3457;Santa Rosa;;;;;;;;;;;;;
 PROV3458;Río Buenaventura;;;;;;;;;;;;;
-PROV3459;Desierto Aguasalada;;;;;;;;;;;;;
+PROV3459;Si'ogwût;;;;;;;;;;;;;
 PROV3460;Adáá Dik'á;;;;;;;;;;;;;
 PROV3461;Warm Springs;;;;;;;;;;;;;
 PROV3462;Siuslaw;;;;;;;;;;;;;
