--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8699,9 +8699,9 @@ PROV90;San Diego;San Diego;San Diego;;San Diego;;;;;;;;;
 PROV91;Boise;Boise;Boise;;Boise;;;;;;;;;
 PROV94;Esmeralda;Esmeralda;Esmeralda;;Esmeralda;;;;;;;;;
 PROV95;Montañas Rubí;Montañas Rubí;Montañas Rubí;;Montañas Rubí;;;;;;;;;
-PROV96;Las Vegas;Las Vegas;Las Vegas;;Las Vegas;;;;;;;;;
-PROV97;Ciudad Aguasalada;Ciudad Aguasalada;Ciudad Aguasalada;;Ciudad Aguasalada;;;;;;;;;
-PROV99;Escalante;Escalante;Escalante;;Escalante;;;;;;;;;
+PROV96;Pahrimpi;Pahrimpi;Pahrimpi;;Pahrimpi;;;;;;;;;
+PROV97;Timpanog;Timpanog;Timpanog;;Timpanog;;;;;;;;;
+PROV99;Sheberetch;Sheberetch;Sheberetch;;Sheberetch;;;;;;;;;
 PROV100;Ligai Si'án;Ligai Si'án;Ligai Si'án;;Ligai Si'án;;;;;;;;;
 PROV101;Teki'aulva;Teki'aulva;Teki'aulva;;Teki'aulva;;;;;;;;;
 PROV102;Nchaa Sí'an;Nchaa Sí'an;Nchaa Sí'an;;Nchaa Sí'an;;;;;;;;;
