California, Nebraska, Iowa, Great Lakes

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1467,7 +1467,7 @@ PROV201;Atseechota;Atseechota;Atseechota;;Atseechota;;;;;;;;;
 PROV191;Hiwalsee;Hiwalsee;Hiwalsee;;Hiwalsee;;;;;;;;;
 founding_atlanta_title;Found Atlanta;;;;;;;;;;;;;
 founding_atlanta_desc;With the growth of our railroad system in Georgia, communities have gathered around the terminus of the Western and Atlantic Railroad near the Chattahoochee. Incorporating the area as a new city, Atlanta, will bring prosperity and growth to the as-yet rural region.;;;;;;;;;;;;;
-PROV159;Juneautown;;;;;;;;;;;;;
+PROV159;Mahnahwauk;;;;;;;;;;;;;
 founding_milwaukee_title;Found Milwaukee;;;;;;;;;;;;;
 founding_milwaukee_desc;Three small settlements along the shore of Lake Michigan, Juneaustown, Kilbourntown, and Walker's Point, have grown significantly in the past few years. By incorporating these as the city of Milwaukee, we can drive new settlement to Wisconsin.;;;;;;;;;;;;;
 lincoln_highway_title;Build the Lincoln Highway;;;;;;;;;;;;;
@@ -2365,8 +2365,8 @@ PROV3322;Qarasheher;;;;;;;;;;;;;
 PROV3321;Fort Ripley;;;;;;;;;;;;;
 PROV157;Fort Pembina;;;;;;;;;;;;;
 PROV3297;San Ángelo;;;;;;;;;;;;;
-PROV88;Mojave del Norte;;;;;;;;;;;;;
-PROV3451;Mojave del Sur;;;;;;;;;;;;;
+PROV88;Hayikwiir Mat'aar;;;;;;;;;;;;;
+PROV3451;'Aha Kwahwat;;;;;;;;;;;;;
 PROV3566;Archipiélago del Norte;;;;;;;;;;;;;
 PROV2186;Ciudad de Guatemala;;;;;;;;;;;;;
 PROV2204;Ciudad de Panamá;;;;;;;;;;;;;
