--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -370,9 +370,9 @@ PROV156;Fort Renville;;;;;;;;;;;;;
 PROV157;Fort Ripley;;;;;;;;;;;;;
 PROV92;Kullyspell;;;;;;;;;;;;;
 PROV93;Fort Hall;;;;;;;;;;;;;
-PROV123;Fort Robidoux;;;;;;;;;;;;;
-PROV124;Masikota;;;;;;;;;;;;;
-PROV125;Fontenelle's Post;;;;;;;;;;;;;
+PROV123;Umonhohn;;;;;;;;;;;;;
+PROV124;Kitkehaxpakuxtu;;;;;;;;;;;;;
+PROV125;Tuhricpii'at;;;;;;;;;;;;;
 PROV126;Hujé Tan'ga;;;;;;;;;;;;;
 PROV127;'Gúhàle;;;;;;;;;;;;;
 PROV113;Gallatin Valley;;;;;;;;;;;;;
@@ -381,7 +381,7 @@ PROV118;Fort James;;;;;;;;;;;;;
 PROV119;Fort Union;;;;;;;;;;;;;
 PROV122;Fort Pierre;;;;;;;;;;;;;
 PROV121;Fort Cedar;;;;;;;;;;;;;
-PROV120;Fort Kiowa;;;;;;;;;;;;;
+PROV120;Tehankasandata;;;;;;;;;;;;;
 PROV114;Fort Owen;;;;;;;;;;;;;
 PROV115;Fort Benton;;;;;;;;;;;;;
 PROV116;Fort Van Buren;;;;;;;;;;;;;
@@ -904,8 +904,8 @@ PROV128;Yaparuhka;;;;;;;;;;;;;
 PROV638;Eperies;;;;;;;;;;;;;
 AUS_625;Böhmen;;;;;;;;;;;;;
 AUS_626;Mähren;;;;;;;;;;;;;
-PROV84;Sacramento;;;;;;;;;;;;;
-PROV86;Sierra Nevada;;;;;;;;;;;;;
+PROV84;Kahwatchwah;;;;;;;;;;;;;
+PROV86;Mauwaayu;;;;;;;;;;;;;
 PROV98;Pi'aroiyabi;;;;;;;;;;;;;
 PROV23;Fort McMurray;;;;;;;;;;;;;
 PROV27;Edmonton;;;;;;;;;;;;;
@@ -931,7 +931,7 @@ BAV_601;Niederbayern;;;;;;;;;;;;;
 PROV3249;Old Tientsin;;;;;;;;;;;;;
 PROV606;Luzern;;;;;;;;;;;;;
 PROV2627;Coudersport;;;;;;;;;;;;;
-PROV160;Superior;;;;;;;;;;;;;
+PROV160;Gete-oodenaang;;;;;;;;;;;;;
 PROV3250;Fribourg;;;;;;;;;;;;;
 PROV3251;Monaco;;;;;;;;;;;;;
 PROV185;Pikeville;;;;;;;;;;;;;
@@ -1389,8 +1389,10 @@ PROV4040;Kusawatu;;;;;;;;;;;;;
 PROV4041;Columbus;;;;;;;;;;;;;
 PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
+PROV4044;Maquawautaw;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4055;Sahpeech;;;;;;;;;;;;;
+PROV4056;Chasmú Okáhmi;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
 PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
 PROV4061;Yritila;;;;;;;;;;;;;
@@ -1410,4 +1412,6 @@ PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
+PROV4100;Phanhkéska;;;;;;;;;;;;;
+PROV4101;Beesowu;;;;;;;;;;;;;
 PROV4102;Nanwuine'nan;;;;;;;;;;;;;
