--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1654,18 +1654,18 @@ pawn;Pawn;;;;;;;;;;;;;
 elderly;Elderly;;;;;;;;;;;;;
 incompetent;Incompetent;;;;;;;;;;;;;
 PROV3448;Santa Clara;;;;;;;;;;;;;
-PROV3449;San Joaquín;;;;;;;;;;;;;
+PROV3449;Paháhsu;;;;;;;;;;;;;
 PROV3450;Santa Bárbara;;;;;;;;;;;;;
 PROV3451;Southern Mojave;;;;;;;;;;;;;
-PROV3452;Mariposa;;;;;;;;;;;;;
-PROV3453;Cabrillo;;;;;;;;;;;;;
-PROV3454;Puerto Trinidad;;;;;;;;;;;;;
-PROV3455;Cabo Mendocino;;;;;;;;;;;;;
+PROV3452;Payahuunadu;;;;;;;;;;;;;
+PROV3453;Ahotireitsu;;;;;;;;;;;;;
+PROV3454;Taalaawaadvn;;;;;;;;;;;;;
+PROV3455;Ni'ekeni;;;;;;;;;;;;;
 MEX_85_1;Alta California;;;;;;;;;;;;;
 MEX_85_2;California Central;;;;;;;;;;;;;
 PROV3456;Cuk Do'ag;;;;;;;;;;;;;
-PROV3457;Santa Rosa;;;;;;;;;;;;;
-PROV3458;Río Buenaventura;;;;;;;;;;;;;
+PROV3457;Agaipaninadi;;;;;;;;;;;;;
+PROV3458;Tosawi'ccih;;;;;;;;;;;;;
 PROV3459;Si'ogwût;;;;;;;;;;;;;
 PROV3460;Adáá Dik'á;;;;;;;;;;;;;
 PROV3461;Warm Springs;;;;;;;;;;;;;
