--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8697,8 +8697,8 @@ PROV87;Monterrey;Monterrey;Monterrey;;Monterrey;;;;;;;;;
 PROV89;Los Ángeles;Los Ángeles;Los Ángeles;;Los Ángeles;;;;;;;;;
 PROV90;San Diego;San Diego;San Diego;;San Diego;;;;;;;;;
 PROV91;Boise;Boise;Boise;;Boise;;;;;;;;;
-PROV94;Esmeralda;Esmeralda;Esmeralda;;Esmeralda;;;;;;;;;
-PROV95;Montañas Rubí;Montañas Rubí;Montañas Rubí;;Montañas Rubí;;;;;;;;;
+PROV94;Onabedukadu;Onabedukadu;Onabedukadu;;Onabedukadu;;;;;;;;;
+PROV95;Kuyudikka;Kuyudikka;Kuyudikka;;Kuyudikka;;;;;;;;;
 PROV96;Pahrimpi;Pahrimpi;Pahrimpi;;Pahrimpi;;;;;;;;;
 PROV97;Timpanog;Timpanog;Timpanog;;Timpanog;;;;;;;;;
 PROV99;Sheberetch;Sheberetch;Sheberetch;;Sheberetch;;;;;;;;;
@@ -8722,27 +8722,27 @@ PROV147;Springfield;Springfield;Springfield;;Springfield;;;;;;;;;
 PROV148;Malden;Malden;Malden;;Malden;;;;;;;;;
 PROV149;Mixa Sga'hü;Mixa Sga'hü;Mixa Sga'hü;;Mixa Sga'hü;;;;;;;;;
 PROV150;Kansas City;Kansas City;Kansas City;;Kansas City;;;;;;;;;
-PROV151;Des Moines;Des Moines;Des Moines;;Des Moines;;;;;;;;;
-PROV152;Oskaloosa;Oskaloosa;Oskaloosa;;Oskaloosa;;;;;;;;;
-PROV153;Cedar Rapids;Cedar Rapids;Cedar Rapids;;Rápidos de Cedar;;;;;;;;;
+PROV151;Maxúshga;Maxúshga;Maxúshga;;Maxúshga;;;;;;;;;
+PROV152;Oskeluste;Oskeluste;Oskeluste;;Oskeluste;;;;;;;;;
+PROV153;Kutawakpá;Kutawakpá;Kutawakpá;;Kutawakpá;;;;;;;;;
 PROV154;Sioux City;Sioux City;Sioux City;;Sioux City;;;;;;;;;
-PROV159;Milwaukee;Milwaukee;Milwaukee;;Milwaukee;;;;;;;;;
-PROV161;Green Bay;Green Bay;Green Bay;;Green Bay;;;;;;;;;
+PROV159;Mahnahwauk;Mahnahwauk;Mahnahwauk;;Mahnahwauk;;;;;;;;;
+PROV161;Waasa;Waasa;Waasa;;Waasa;;;;;;;;;
 PROV162;Madison;Madison;Madison;;Madison;;;;;;;;;
-PROV163;Chicago;Chicago;Chicago;;Chicago;;;;;;;;;
+PROV163;Shikaakwa;Shikaakwa;Shikaakwa;;Shikaakwa;;;;;;;;;
 PROV164;Rockford;Rockford;Rockford;;Rockford;;;;;;;;;
 PROV165;Champaign;Champaign;Champaign;;Champaign;;;;;;;;;
 PROV166;Peoria;Peoria;Peoria;;Peoria;;;;;;;;;
 PROV167;Springfield;Springfield;Springfield;;Springfield;;;;;;;;;
 PROV169;Indianapolis;Indianapolis;Indianapolis;;Indianápolis;;;;;;;;;
 PROV170;Evansville;Evansville;Evansville;;Evansville;;;;;;;;;
-PROV171;South Bend;South Bend;South Bend;;South Bend;;;;;;;;;
-PROV172;Fort Wayne;Fort Wayne;Fort Wayne;;Fuerte Wayne;;;;;;;;;
+PROV171;Nênkâwak;Nênkâwak;Nênkâwak;;Nênkâwak;;;;;;;;;
+PROV172;Kekionga;Kekionga;Kekionga;;Kekionga;;;;;;;;;
 PROV173;Detroit;Detroit;Detroit;;Detroit;;;;;;;;;
-PROV174;Grand Rapids;Grand Rapids;Grand Rapids;;Grand Rapids;;;;;;;;;
-PROV175;Saginaw;Saginaw;Saginaw;;Saginaw;;;;;;;;;
-PROV176;Traverse City;Traverse City;Traverse City;;Traverse City;;;;;;;;;
-PROV177;Marquette;Marquette;Marquette;;Marquette;;;;;;;;;
+PROV174;Baawiting;Baawiting;Baawiting;;Baawiting;;;;;;;;;
+PROV175;Zaagiinaang;Zaagiinaang;Zaagiinaang;;Zaagiinaang;;;;;;;;;
+PROV176;Adaawewiziibi;Adaawewiziibi;Adaawewiziibi;;Adaawewiziibi;;;;;;;;;
+PROV177;Hahathunhwanh;Hahathunhwanh;Hahathunhwanh;;Hahathunhwanh;;;;;;;;;
 PROV178;Cleveland;Cleveland;Cleveland;;Cleveland;;;;;;;;;
 PROV179;Columbus;Columbus;Columbus;;Columbus;;;;;;;;;
 PROV180;Sandusky;Sandusky;Sandusky;;Sandusky;;;;;;;;;
