Minnesota my beloved

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2362,8 +2362,8 @@ PROV1594;Qeshqer;;;;;;;;;;;;;
 PROV1598;Keriya;;;;;;;;;;;;;
 PROV2607;Chaqliq;;;;;;;;;;;;;
 PROV3322;Qarasheher;;;;;;;;;;;;;
-PROV3321;Fort Ripley;;;;;;;;;;;;;
-PROV157;Fort Pembina;;;;;;;;;;;;;
+PROV3321;Aandeg Oningwiigan;;;;;;;;;;;;;
+PROV157;Bemijigamaag;;;;;;;;;;;;;
 PROV3297;San Ángelo;;;;;;;;;;;;;
 PROV88;Hayikwiir Mat'aar;;;;;;;;;;;;;
 PROV3451;'Aha Kwahwat;;;;;;;;;;;;;
