--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -57,7 +57,6 @@ PROV3317;Fort Walbach;;;;;;;;;;;;;
 PROV3318;Arwa;;;;;;;;;;;;;
 PROV3319;Jacmel;;;;;;;;;;;;;
 PROV3320;Jérémie;;;;;;;;;;;;;
-PROV3321;Tomurlik;;;;;;;;;;;;;
 PROV3322;Karashar;;;;;;;;;;;;;
 PROV3323;Kefelong;;;;;;;;;;;;;
 PROV3324;Rzeszow;;;;;;;;;;;;;
@@ -338,7 +337,7 @@ PROV2351;Ensenada;;;;;;;;;;;;;
 PROV3260;Sado;;;;;;;;;;;;;
 PROV1531;Tombara;;;;;;;;;;;;;
 PROV2537;Birara;;;;;;;;;;;;;
-PROV158;Grand Portage;;;;;;;;;;;;;
+PROV158;Onigamiinsing;;;;;;;;;;;;;
 PROV29;Kyzylkum;;;;;;;;;;;;;
 PROV2595;Nunavut;;;;;;;;;;;;;
 PROV25;Old Bow Fort;;;;;;;;;;;;;
@@ -365,9 +364,8 @@ PROV85;Sonoma;;;;;;;;;;;;;
 FRA_1901;Houet;;;;;;;;;;;;;
 FRA_1904;Gurma;;;;;;;;;;;;;
 ASH_1910;Volta;;;;;;;;;;;;;
-PROV155;Fort Snelling;;;;;;;;;;;;;
-PROV156;Fort Renville;;;;;;;;;;;;;
-PROV157;Fort Ripley;;;;;;;;;;;;;
+PROV155;Gojijiing;;;;;;;;;;;;;
+PROV156;Wáhpešá;;;;;;;;;;;;;
 PROV92;Kullyspell;;;;;;;;;;;;;
 PROV93;Fort Hall;;;;;;;;;;;;;
 PROV123;Umonhohn;;;;;;;;;;;;;
@@ -941,7 +939,7 @@ PROV193;Vicksburg;;;;;;;;;;;;;
 PROV168;Olney;;;;;;;;;;;;;
 PROV3252;Andorra;;;;;;;;;;;;;
 PROV42;Winnipeg;;;;;;;;;;;;;
-PROV36;Pinawa;;;;;;;;;;;;;
+PROV36;Makatoosa;;;;;;;;;;;;;
 PROV3253;Liechtenstein;;;;;;;;;;;;;
 PROV3254;Bückeburg;;;;;;;;;;;;;
 PROV3255;Gera;;;;;;;;;;;;;
@@ -1390,6 +1388,7 @@ PROV4041;Columbus;;;;;;;;;;;;;
 PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4044;Maquawautaw;;;;;;;;;;;;;
+PROV4046;Grand Portage;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4055;Sahpeech;;;;;;;;;;;;;
 PROV4056;Chasmú Okáhmi;;;;;;;;;;;;;
@@ -1400,6 +1399,7 @@ PROV4062;Wohihu;;;;;;;;;;;;;
 PROV4063;Nanatsoho;;;;;;;;;;;;;
 PROV4064;Ho'néoxheóvaestse;;;;;;;;;;;;;
 PROV4065;Thóqàhyòp;;;;;;;;;;;;;
+PROV4067;Gakaabikaang;;;;;;;;;;;;;
 PROV4077;Nacaxtlán;;;;;;;;;;;;;
 PROV4078;Chunhuhub;;;;;;;;;;;;;
 PROV4079;Lama'an Ai;;;;;;;;;;;;;
