--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -374,11 +374,11 @@ PROV125;Tuhricpii'at;;;;;;;;;;;;;
 PROV126;Hujé Tan'ga;;;;;;;;;;;;;
 PROV127;'Gúhàle;;;;;;;;;;;;;
 PROV113;Gallatin Valley;;;;;;;;;;;;;
-PROV117;Fort Clark;;;;;;;;;;;;;
-PROV118;Fort James;;;;;;;;;;;;;
-PROV119;Fort Union;;;;;;;;;;;;;
-PROV122;Fort Pierre;;;;;;;;;;;;;
-PROV121;Fort Cedar;;;;;;;;;;;;;
+PROV117;Awadixá;;;;;;;;;;;;;
+PROV118;Aniibiminani;;;;;;;;;;;;;
+PROV119;Mniwak'anh;;;;;;;;;;;;;
+PROV122;Khulwíchaša;;;;;;;;;;;;;
+PROV121;Pahá Sápa;;;;;;;;;;;;;
 PROV120;Tehankasandata;;;;;;;;;;;;;
 PROV114;Fort Owen;;;;;;;;;;;;;
 PROV115;Fort Benton;;;;;;;;;;;;;
