--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -53,7 +53,7 @@ PROV3313;Gap;;;;;;;;;;;;;
 PROV3314;Boulogne;;;;;;;;;;;;;
 PROV3315;Sochi;;;;;;;;;;;;;
 PROV3316;Zakatata;;;;;;;;;;;;;
-PROV3317;Fort Walbach;;;;;;;;;;;;;
+PROV3317;Ókohkeohe'e;;;;;;;;;;;;;
 PROV3318;Arwa;;;;;;;;;;;;;
 PROV3319;Jacmel;;;;;;;;;;;;;
 PROV3320;Jérémie;;;;;;;;;;;;;
@@ -345,7 +345,7 @@ PROV6;Selkirk;;;;;;;;;;;;;
 PROV35;Fort Pitt;;;;;;;;;;;;;
 PROV28;Jasper;;;;;;;;;;;;;
 PROV26;Rocky Mountain House;;;;;;;;;;;;;
-PROV22;Buckingham House;;;;;;;;;;;;;
+PROV22;Níubthátha;;;;;;;;;;;;;
 PROV24;Etzikom Coulee;;;;;;;;;;;;;
 PROV34;Fort Carlton;;;;;;;;;;;;;
 PROV33;Battleford;;;;;;;;;;;;;
@@ -385,8 +385,8 @@ PROV115;Fort Benton;;;;;;;;;;;;;
 PROV116;Fort Van Buren;;;;;;;;;;;;;
 PROV131;Tusohokwehunu'bi;;;;;;;;;;;;;
 PROV130;Tha'tse Mathi';;;;;;;;;;;;;
-PROV111;Fort Bonneville;;;;;;;;;;;;;
-PROV112;Fort Laramie;;;;;;;;;;;;;
+PROV111;Tukudeka;;;;;;;;;;;;;
+PROV112;Mitsiadazi;;;;;;;;;;;;;
 PROV106;Vétaneo'hé'e;;;;;;;;;;;;;
 PROV2702;Alty-Kuduk;;;;;;;;;;;;;
 PROV686;Merv;;;;;;;;;;;;;
@@ -479,7 +479,7 @@ PROV2787;Hormuz Strait;;;;;;;;;;;;;
 PROV45;Marigot;;;;;;;;;;;;;
 PROV2236;Philipsburg;;;;;;;;;;;;;
 PEU_2297;Cusco;;;;;;;;;;;;;
-PROV110;Uinta;;;;;;;;;;;;;
+PROV110;Yoovwetuh;;;;;;;;;;;;;
 PROV1387;Kelang;;;;;;;;;;;;;
 PROV1385;Tanjung Puteri;;;;;;;;;;;;;
 PROV88;Northern Mojave;;;;;;;;;;;;;
@@ -849,7 +849,7 @@ PROV5;Ekaterininsky Arkhipelag;;;;;;;;;;;;;
 PROV2630;Vostochnaya;;;;;;;;;;;;;
 PROV2;Saint Dionysius;;;;;;;;;;;;;
 PROV1;Novoarkhangelsk;;;;;;;;;;;;;
-PROV107;Sierra Madre;;;;;;;;;;;;;
+PROV107;Hésta'se;;;;;;;;;;;;;
 PROV108;Yapudttka;;;;;;;;;;;;;
 PROV104;Yerba Buena;;;;;;;;;;;;;
 PROV2146;D.C.;;;;;;;;;;;;;
