--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1675,7 +1675,7 @@ PROV3464;Yakima;;;;;;;;;;;;;
 PROV3465;North Cascades;;;;;;;;;;;;;
 PROV3466;Spokane;;;;;;;;;;;;;
 PROV3467;Dillon;;;;;;;;;;;;;
-PROV3468;Riverton;;;;;;;;;;;;;
+PROV3468;Ce'eyeino'oowu';;;;;;;;;;;;;
 greatest_california_title;Claim the West Coast;;;;;;;;;;;;;
 greatest_california_desc;To fulfill our manifest destiny we shall lay claim to the entire West Coast of North America!;;;;;;;;;;;;;
 proclaim_pacific_states_title;Proclaim the Pacific States;;;;;;;;;;;;;
