Montana and Idaho

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -366,23 +366,23 @@ FRA_1904;Gurma;;;;;;;;;;;;;
 ASH_1910;Volta;;;;;;;;;;;;;
 PROV155;Gojijiing;;;;;;;;;;;;;
 PROV156;Wáhpešá;;;;;;;;;;;;;
-PROV92;Kullyspell;;;;;;;;;;;;;
-PROV93;Fort Hall;;;;;;;;;;;;;
+PROV92;Ql'ispé;;;;;;;;;;;;;
+PROV93;Tondzaosha;;;;;;;;;;;;;
 PROV123;Umonhohn;;;;;;;;;;;;;
 PROV124;Kitkehaxpakuxtu;;;;;;;;;;;;;
 PROV125;Tuhricpii'at;;;;;;;;;;;;;
 PROV126;Hujé Tan'ga;;;;;;;;;;;;;
 PROV127;'Gúhàle;;;;;;;;;;;;;
-PROV113;Gallatin Valley;;;;;;;;;;;;;
+PROV113;Baáschuuaashe;;;;;;;;;;;;;
 PROV117;Awadixá;;;;;;;;;;;;;
 PROV118;Aniibiminani;;;;;;;;;;;;;
 PROV119;Mniwak'anh;;;;;;;;;;;;;
 PROV122;Khulwíchaša;;;;;;;;;;;;;
 PROV121;Pahá Sápa;;;;;;;;;;;;;
 PROV120;Tehankasandata;;;;;;;;;;;;;
-PROV114;Fort Owen;;;;;;;;;;;;;
-PROV115;Fort Benton;;;;;;;;;;;;;
-PROV116;Fort Van Buren;;;;;;;;;;;;;
+PROV114;Šlk'etku;;;;;;;;;;;;;
+PROV115;Aamsskáápipikani;;;;;;;;;;;;;
+PROV116;Húdam Wicášta;;;;;;;;;;;;;
 PROV131;Tusohokwehunu'bi;;;;;;;;;;;;;
 PROV130;Tha'tse Mathi';;;;;;;;;;;;;
 PROV111;Tukudeka;;;;;;;;;;;;;
@@ -1412,6 +1412,8 @@ PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
+PROV4099;Sihasapa;;;;;;;;;;;;;
 PROV4100;Phanhkéska;;;;;;;;;;;;;
 PROV4101;Beesowu;;;;;;;;;;;;;
 PROV4102;Nanwuine'nan;;;;;;;;;;;;;
+PROV4103;Ammalapáshkuua;;;;;;;;;;;;;
