--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1674,7 +1674,7 @@ PROV3463;Princeton;;;;;;;;;;;;;
 PROV3464;Yakima;;;;;;;;;;;;;
 PROV3465;North Cascades;;;;;;;;;;;;;
 PROV3466;Spokane;;;;;;;;;;;;;
-PROV3467;Dillon;;;;;;;;;;;;;
+PROV3467;Yúxu'ctx Scútqu;;;;;;;;;;;;;
 PROV3468;Ce'eyeino'oowu';;;;;;;;;;;;;
 greatest_california_title;Claim the West Coast;;;;;;;;;;;;;
 greatest_california_desc;To fulfill our manifest destiny we shall lay claim to the entire West Coast of North America!;;;;;;;;;;;;;
