--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8696,7 +8696,7 @@ PROV80;Walla Walla;Walla Walla;Walla Walla;;Walla Walla;;;;;;;;;
 PROV87;Monterrey;Monterrey;Monterrey;;Monterrey;;;;;;;;;
 PROV89;Los 聲geles;Los 聲geles;Los 聲geles;;Los 聲geles;;;;;;;;;
 PROV90;San Diego;San Diego;San Diego;;San Diego;;;;;;;;;
-PROV91;Boise;Boise;Boise;;Boise;;;;;;;;;
+PROV91;Kin瘼ikoyiniwak;Kin瘼ikoyiniwak;Kin瘼ikoyiniwak;;Kin瘼ikoyiniwak;;;;;;;;;
 PROV94;Onabedukadu;Onabedukadu;Onabedukadu;;Onabedukadu;;;;;;;;;
 PROV95;Kuyudikka;Kuyudikka;Kuyudikka;;Kuyudikka;;;;;;;;;
 PROV96;Pahrimpi;Pahrimpi;Pahrimpi;;Pahrimpi;;;;;;;;;
