everything but prairie canada and ontario names

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1084,7 +1084,7 @@ NAGASAKIINCIDENT1;The Beiyang fleet docked in Nagasaki in a visit as part of the
 NAGASAKIINCIDENT2;The Qing Beiyang fleet docked in Nagasaki in a visit as part of their tour of various major Asian harbors as a show of force. 500 Chinese sailors took part in shore leave, going to the red-light district, where during an altercation with locals, they damaged fixtures. Locals also reported that drunken sailors went around the city pursuing women and children, causing an outrage. Nagasaki Prefecture Police Department tried to intervene together with a large number of local civilians. As a result, the policemen and Chinese sailors, using swords purchased from stores, began to fight hand-to-hand in sword battles within the city, causing at least 80 deaths. How should we respond to this scandal?;;;;;;;;;;;;;
 PROV2517;Guaján;;;;;;;;;;;;;
 PROV2521;Saipán;;;;;;;;;;;;;
-PROV2599;Fort Kwi'pak;;;;;;;;;;;;;
+PROV2599;Dradlaya Nik'a;;;;;;;;;;;;;
 parliament_reconstruction_title;Rebuild the House of Parliament;;;;;;;;;;;;;
 parliament_reconstruction_desc;The majority of the Palace of Westminster burned down in 1834 after a bundle of tally sticks caused a stove fire underneath the House of Lords, spreading through the entire complex. We must rebuild the Palace in all its glory--and with the architectural genius Charles Barry having won a public contest for submitting the Palace's new design, we have an opportunity to construct a Parliament building for the ages.;;;;;;;;;;;;;
 reform_england_title;Reform England;;;;;;;;;;;;;
@@ -1392,10 +1392,10 @@ the_prince_of_the_people_desc;King Kalaniana’ole enjoys a large amount of popula
 first_red_scare;The First Red Scare;;;;;;;;;;;;
 first_red_scare_desc;The federal government has embarked on a covert campaign against communist and soocialist influences in our nation through the creation of the Radical Division. Headed by Director John Edgar Hoover, the Division seeks to destroy communist infiltration internal and external.;;;;;;;;;;;;
 PROV3589;Las Cruces;;;;;;;;;;;;
-PROV3597;Atlin;;;;;;;;;;;;
-PROV3598;San Juan Islands;;;;;;;;;;;;
-PROV3599;Nanaimo;;;;;;;;;;;;
-PROV3600;Port Townsend;;;;;;;;;;;;
+PROV3597;Wéinaa;;;;;;;;;;;;
+PROV3598;Xwlalemes;;;;;;;;;;;;
+PROV3599;Snuneymuxw;;;;;;;;;;;;
+PROV3600;Aqokúlo;;;;;;;;;;;;
 PROV3601;Krepost Suarov;;;;;;;;;;;;
 PROV3602;Laccadives;;;;;;;;;;;;
 PROV3603;Jekabpils;;;;;;;;;;;;
@@ -1407,7 +1407,7 @@ PROV3608;Preston;;;;;;;;;;;;
 PROV3609;Cheboksary;;;;;;;;;;;;
 PROV3610;Wadelai;;;;;;;;;;;;
 PROV3611;Limbe;;;;;;;;;;;;
-PROV3612;North West River;;;;;;;;;;;;
+PROV3612;Tessiartosoak;;;;;;;;;;;;
 PROV2625;Cartwright;;;;;;;;;;;;
 PROV3613;Thasus;;;;;;;;;;;;
 PROV3614;San Andrés y Providencia;;;;;;;;;;;;
@@ -2364,7 +2364,7 @@ PROV2607;Chaqliq;;;;;;;;;;;;;
 PROV3322;Qarasheher;;;;;;;;;;;;;
 PROV3321;Aandeg Oningwiigan;;;;;;;;;;;;;
 PROV157;Bemijigamaag;;;;;;;;;;;;;
-PROV3297;San Ángelo;;;;;;;;;;;;;
+PROV3297;Kangiqiniq;;;;;;;;;;;;;
 PROV88;Hayikwiir Mat'aar;;;;;;;;;;;;;
 PROV3451;'Aha Kwahwat;;;;;;;;;;;;;
 PROV3566;Archipiélago del Norte;;;;;;;;;;;;;
