--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -215,7 +215,7 @@ PROV848;Kandiye;;;;;;;;;;;;;
 EGY_843;Ege Adalari;;;;;;;;;;;;;
 TUR_832;Teselya;;;;;;;;;;;;;
 AUS_624;Burgenland;;;;;;;;;;;;;
-PROV368;Queen Charlotte Islands;;;;;;;;;;;;;
+PROV368;Haida Gwaii;;;;;;;;;;;;;
 PROV2548;Igdir;;;;;;;;;;;;;
 PROV1179;al-Hudaydah;;;;;;;;;;;;;
 PROV1841;al-Fashir;;;;;;;;;;;;;
@@ -341,7 +341,7 @@ PROV158;Onigamiinsing;;;;;;;;;;;;;
 PROV29;Kyzylkum;;;;;;;;;;;;;
 PROV2595;Nunavut;;;;;;;;;;;;;
 PROV25;Old Bow Fort;;;;;;;;;;;;;
-PROV6;Selkirk;;;;;;;;;;;;;
+PROV6;Tr'ondëk Hwëch'in;;;;;;;;;;;;;
 PROV35;Fort Pitt;;;;;;;;;;;;;
 PROV28;Jasper;;;;;;;;;;;;;
 PROV26;Rocky Mountain House;;;;;;;;;;;;;
@@ -617,10 +617,10 @@ PROV1481;Lüshun;;;;;;;;;;;;;
 PROV2083;Ezorongondo;;;;;;;;;;;;;
 PROV1019;Voronezh;;;;;;;;;;;;;
 PROV3246;Saint Barths;;;;;;;;;;;;;
-PROV82;Grande Ronde;;;;;;;;;;;;;
+PROV82;Imatalamlháma;;;;;;;;;;;;;
 PROV81;Oregon City;;;;;;;;;;;;;
-PROV83;Fort Umpqua;;;;;;;;;;;;;
-PROV78;Fort Nisqually;;;;;;;;;;;;;
+PROV83;Yanshuuchit' Taaghii~li~;;;;;;;;;;;;;
+PROV78;Xwot'qom;;;;;;;;;;;;;
 PROV2101;Thaba Nchu;;;;;;;;;;;;;
 PROV2102;Qwa-Qwa;;;;;;;;;;;;;
 PROV2103;Philippolis;;;;;;;;;;;;;
@@ -635,11 +635,11 @@ PROV2112;Emnambithi;;;;;;;;;;;;;
 ORA_2103;Basutoland;;;;;;;;;;;;;
 ZUL_2113;Zululand;;;;;;;;;;;;;
 PROV1152;Jeddah;;;;;;;;;;;;;
-PROV13;New Westminster;;;;;;;;;;;;;
-PROV17;Stikine;;;;;;;;;;;;;
+PROV13;Fort Langley;;;;;;;;;;;;;
+PROV17;Iskut;;;;;;;;;;;;;
 CAN_19;New Caledonia;;;;;;;;;;;;;
-PROV20;Okanagan;;;;;;;;;;;;;
-PROV21;Kootenay;;;;;;;;;;;;;
+PROV20;Ukwnaqín;;;;;;;;;;;;;
+PROV21;Ktunaxa;;;;;;;;;;;;;
 PROV44;Guantanamo Bay;;;;;;;;;;;;;
 CAN_50;Upper Canada;;;;;;;;;;;;;
 CAN_58;Lower Canada;;;;;;;;;;;;;
@@ -844,10 +844,10 @@ MEX_2172;Valle de México;;;;;;;;;;;;;
 MEX_2181;Chiapas;;;;;;;;;;;;;
 PROV220;Annapolis;;;;;;;;;;;;;
 PROV3;Fort Nikolaevskaia;;;;;;;;;;;;;
-PROV4;Nikolaevsk;;;;;;;;;;;;;
+PROV4;Tsedi Na’;;;;;;;;;;;;;
 PROV5;Ekaterininsky Arkhipelag;;;;;;;;;;;;;
-PROV2630;Vostochnaya;;;;;;;;;;;;;
-PROV2;Saint Dionysius;;;;;;;;;;;;;
+PROV2630;Tthee T’äwdlenn;;;;;;;;;;;;;
+PROV2;Tlákw'aan;;;;;;;;;;;;;
 PROV1;Novoarkhangelsk;;;;;;;;;;;;;
 PROV107;Hésta'se;;;;;;;;;;;;;
 PROV108;Yapudttka;;;;;;;;;;;;;
@@ -885,7 +885,7 @@ PROV2838;Genista Bank;;;;;;;;;;;;;
 PROV2843;Seto Inland Sea;;;;;;;;;;;;;
 PROV3126;Coast of Minami;;;;;;;;;;;;;
 CAN_13;Columbia;;;;;;;;;;;;;
-PROV19;Valemount;;;;;;;;;;;;;
+PROV19;Lheidli;;;;;;;;;;;;;
 HAN_528;Niederelbe;;;;;;;;;;;;;
 HAN_540;Ost-Friesland;;;;;;;;;;;;;
 PRU_553;Anhalt;;;;;;;;;;;;;
@@ -896,7 +896,7 @@ PRU_578;Ost-Rheinland;;;;;;;;;;;;;
 BAV_595;Franken;;;;;;;;;;;;;
 PRU_684;Upper Silesia;;;;;;;;;;;;;
 PROV79;Fort Vancouver;;;;;;;;;;;;;
-PROV18;Dawson's Creek;;;;;;;;;;;;;
+PROV18;Tse’khene;;;;;;;;;;;;;
 PROV129;Piakwasiahunu'bi;;;;;;;;;;;;;
 PROV128;Yaparuhka;;;;;;;;;;;;;
 PROV638;Eperies;;;;;;;;;;;;;
@@ -948,7 +948,7 @@ PROV3257;Waldeck;;;;;;;;;;;;;
 PROV60;Richmond;;;;;;;;;;;;;
 PROV211;Lynchburg;;;;;;;;;;;;;
 PROV2186;Guatemala City;;;;;;;;;;;;;
-PROV14;Victoria;;;;;;;;;;;;;
+PROV14;Camossung;;;;;;;;;;;;;
 PROV3259;Jadegebiet;;;;;;;;;;;;;
 east_africa;East Africa;;;;;;;;;;;;;
 west_africa;West Africa;;;;;;;;;;;;;
@@ -1021,7 +1021,7 @@ PROV3572;Lahij;;;;;;;;;;;;;
 PROV1249;Dhanbad;;;;;;;;;;;;;
 PROV3573;Izu;;;;;;;;;;;;;
 PROV835;Thíva;;;;;;;;;;;;;
-PROV2629;Fort Nelson;;;;;;;;;;;;;
+PROV2629;Dane-Zaa;;;;;;;;;;;;;
 edo_culture;Edoid;;;;;;;;;;;;;
 PROV802;Pristine;;;;;;;;;;;;;
 PROV803;Pürzerrin;;;;;;;;;;;;;
@@ -1389,6 +1389,9 @@ PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4044;Maquawautaw;;;;;;;;;;;;;
 PROV4046;Grand Portage;;;;;;;;;;;;;
+PROV4047;Auassat Kapmehenhiht;;;;;;;;;;;;;
+PROV4050;Fort Nez Percés;;;;;;;;;;;;;
+PROV4051;Fort Okanogan;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4055;Sahpeech;;;;;;;;;;;;;
 PROV4056;Chasmú Okáhmi;;;;;;;;;;;;;
@@ -1412,6 +1415,7 @@ PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
+PROV4095;Fort Kamloops;;;;;;;;;;;;;
 PROV4099;Sihasapa;;;;;;;;;;;;;
 PROV4100;Phanhkéska;;;;;;;;;;;;;
 PROV4101;Beesowu;;;;;;;;;;;;;
