--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1013,7 +1013,7 @@ PROV3481;Heidelberg;;;;;;;;;;;;;
 PROV3482;Fernando de Noronha;;;;;;;;;;;;;
 PROV3483;Prag;;;;;;;;;;;;;
 PROV3484;Novaya Zemlya;;;;;;;;;;;;;
-PROV3485;Baffin Island;;;;;;;;;;;;;
+PROV3485;Qikiqtaaluk;;;;;;;;;;;;;
 PROV3494;Rekohu;;;;;;;;;;;;;
 BGR;Bulgaria-Romania;;;;;;;;;;;;;
 BGR_absolute_monarchy;The Kingdom of Bulgaria-Romania;;;;;;;;;;;;;
@@ -1668,12 +1668,12 @@ PROV3457;Agaipaninadi;;;;;;;;;;;;;
 PROV3458;Tosawi'ccih;;;;;;;;;;;;;
 PROV3459;Si'ogwût;;;;;;;;;;;;;
 PROV3460;Adáá Dik'á;;;;;;;;;;;;;
-PROV3461;Warm Springs;;;;;;;;;;;;;
+PROV3461;Ahantchuyuk;;;;;;;;;;;;;
 PROV3462;Siuslaw;;;;;;;;;;;;;
-PROV3463;Princeton;;;;;;;;;;;;;
-PROV3464;Yakima;;;;;;;;;;;;;
-PROV3465;North Cascades;;;;;;;;;;;;;
-PROV3466;Spokane;;;;;;;;;;;;;
+PROV3463;Hunipuitöka;;;;;;;;;;;;;
+PROV3464;Xwálhxwaypam;;;;;;;;;;;;;
+PROV3465;Sqadcatabš;;;;;;;;;;;;;
+PROV3466;Scecuwe;;;;;;;;;;;;;
 PROV3467;Yúxu'ctx Scútqu;;;;;;;;;;;;;
 PROV3468;Ce'eyeino'oowu';;;;;;;;;;;;;
 greatest_california_title;Claim the West Coast;;;;;;;;;;;;;
