--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8659,10 +8659,10 @@ europe;Europe;Europe;Europa;;Europa;;;;;;;;;
 asia;Asia;Asie;Asien;Europa;Asia;europa;európa;Evropa;;;;;;
 africa;Africa;Afrique;Afrika;Azja;África;asia;ázsia;Asie;;;;;;
 south_america;South America;Sud Amérique;Südamerika;Ameryka P³n.;Sudamérica;nord america;észak-amerika;Severní Amerika;;;;;;
-PROV7;Dawson;Dawson;Dawson;;Dawson;;;;;;;;;
-PROV11;Echo Bay;Echo Bay;Echo Bay;;Echo Bay;;;;;;;;;
-PROV15;Prince Rupert;Prince Rupert;Prince Rupert;;Prince Rupert;;;;;;;;;
-PROV16;Glenora;Glenora;Glenora;;Glenora;;;;;;;;;
+PROV7;Chu Nìikwän;Chu Nìikwän;Chu Nìikwän;;Chu Nìikwän;;;;;;;;;
+PROV11;Tlhicho;Tlhicho;Tlhicho;;Tlhicho;;;;;;;;;
+PROV15;Ts'msyen;Ts'msyen;Ts'msyen;;Ts'msyen;;;;;;;;;
+PROV16;Wet'suwet'en;Wet'suwet'en;Wet'suwet'en;;Wet'suwet'en;;;;;;;;;
 PROV30;Regina;Regina;Regina;;Regina;;;;;;;;;
 PROV37;Churchill;Churchill;Churchill;;Churchill;;;;;;;;;
 PROV38;Indian Lakes;Indian Lakes;Indian Lakes;;Indian Lakes;;;;;;;;;
@@ -8690,9 +8690,9 @@ PROV71;Halifax;Halifax;Halifax;;Halifax;;;;;;;;;
 PROV72;Truro;Truro;Truro;;Truro;;;;;;;;;
 PROV73;Cape Breton Island;Cape Breton Island;Cape Breton Island;;Isla del Cabo Breton;;;;;;;;;
 PROV74;Saint Johns;Saint-John's;Saint Johns;;Saint Johns;;;;;;;;;
-PROV76;Hopedale;Hopedale;Hopedale;;Hopedale;;;;;;;;;
+PROV76;Aulatsivik;Aulatsivik;Aulatsivik;;Aulatsivik;;;;;;;;;
 PROV77;St Pierre & Miquelon;Saint-Pierre et Miquelon;St Pierre & Miquelon;;San Pedro y Miguelón;;;;;;;;;
-PROV80;Walla Walla;Walla Walla;Walla Walla;;Walla Walla;;;;;;;;;
+PROV80;Whut'en;Whut'en;Whut'en;;Whut'en;;;;;;;;;
 PROV87;Monterrey;Monterrey;Monterrey;;Monterrey;;;;;;;;;
 PROV89;Los Ángeles;Los Ángeles;Los Ángeles;;Los Ángeles;;;;;;;;;
 PROV90;San Diego;San Diego;San Diego;;San Diego;;;;;;;;;
@@ -10691,9 +10691,9 @@ PROV2587;Kóla;Kóla;Kóla;;Kóla;;;;;;;;;
 PROV2588;Onega;Onega;Onega;;Onega;;;;;;;;;
 PROV2592;Fort Chimo;Fort Chimo;Fort Chimo;;Fort Chimo;;;;;;;;;
 PROV2593;Fort George;Fort George;Fort George;;Fort George;;;;;;;;;
-PROV2596;Fort Resolution;Fort Resolution;Fort Resolution;;Fort Resolution;;;;;;;;;
+PROV2596;Qamani'tuaq;Qamani'tuaq;Qamani'tuaq;;Qamani'tuaq;;;;;;;;;
 PROV2597;Fort Vermilion;Fort Vermilion;Fort Vermilion;;Fort Vermilion;;;;;;;;;
-PROV2598;Fort Liard;Fort Liard;Fort Liard;;Fort Liard;;;;;;;;;
+PROV2598;Echaot'l Koe;Echaot'l Koe;Echaot'l Koe;;Echaot'l Koe;;;;;;;;;
 PROV2600;Altamira;Altamira;Altamira;;Altamira;;;;;;;;;
 PROV2602;Roebourne;Roebourne;Roebourne;;Roebourne;;;;;;;;;
 PROV2604;Normanton;Normanton;Normanton;;Normanton;;;;;;;;;
