--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -339,21 +339,21 @@ PROV1531;Tombara;;;;;;;;;;;;;
 PROV2537;Birara;;;;;;;;;;;;;
 PROV158;Onigamiinsing;;;;;;;;;;;;;
 PROV29;Kyzylkum;;;;;;;;;;;;;
-PROV2595;Nunavut;;;;;;;;;;;;;
-PROV25;Old Bow Fort;;;;;;;;;;;;;
+PROV2595;York Factory;;;;;;;;;;;;;
+PROV25;Mohkínstsis;;;;;;;;;;;;;
 PROV6;Tr'ondëk Hwëch'in;;;;;;;;;;;;;
-PROV35;Fort Pitt;;;;;;;;;;;;;
-PROV28;Jasper;;;;;;;;;;;;;
-PROV26;Rocky Mountain House;;;;;;;;;;;;;
+PROV35;Cáhe Wicášta;;;;;;;;;;;;;
+PROV28;Fort Edmonton;;;;;;;;;;;;;
+PROV26;Kaayihkimikoyi;;;;;;;;;;;;;
 PROV22;Níubthátha;;;;;;;;;;;;;
-PROV24;Etzikom Coulee;;;;;;;;;;;;;
-PROV34;Fort Carlton;;;;;;;;;;;;;
-PROV33;Battleford;;;;;;;;;;;;;
-PROV41;Fort Ellice;;;;;;;;;;;;;
-PROV30;Chimney Coulee;;;;;;;;;;;;;
-PROV2594;Osnaburgh House;;;;;;;;;;;;;
-PROV49;Rat Portage;;;;;;;;;;;;;
-PROV52;Orillia;;;;;;;;;;;;;
+PROV24;Manâtakâw;;;;;;;;;;;;;
+PROV34;Baha´ Ipa´pahi;;;;;;;;;;;;;
+PROV33;Cumberland House;;;;;;;;;;;;;
+PROV41;Miníšatonwanbi;;;;;;;;;;;;;
+PROV30;Níh'ootóóúníícááh;;;;;;;;;;;;;
+PROV2594;Weagamow;;;;;;;;;;;;;
+PROV49;Baawitigo;;;;;;;;;;;;;
+PROV52;Genabaajing;;;;;;;;;;;;;
 PROV75;Port-Aux-Basques;;;;;;;;;;;;;
 PROV69;Petit-Sault;;;;;;;;;;;;;
 PROV683;Waldenburg;;;;;;;;;;;;;
@@ -905,13 +905,13 @@ AUS_626;Mähren;;;;;;;;;;;;;
 PROV84;Kahwatchwah;;;;;;;;;;;;;
 PROV86;Mauwaayu;;;;;;;;;;;;;
 PROV98;Pi'aroiyabi;;;;;;;;;;;;;
-PROV23;Fort McMurray;;;;;;;;;;;;;
-PROV27;Edmonton;;;;;;;;;;;;;
-PROV31;Black Lake;;;;;;;;;;;;;
-PROV32;La Ronge;;;;;;;;;;;;;
-PROV40;Dauphin;;;;;;;;;;;;;
-PROV9;Fort MacKenzie;;;;;;;;;;;;;
-PROV2626;Sakami;;;;;;;;;;;;;
+PROV23;Dënesuliné;;;;;;;;;;;;;
+PROV27;Kehewin;;;;;;;;;;;;;
+PROV31;Cîkahikan;;;;;;;;;;;;;
+PROV32;Kimosôm;;;;;;;;;;;;;
+PROV40;Berens Post;;;;;;;;;;;;;
+PROV9;Sangumaniq;;;;;;;;;;;;;
+PROV2626;Iqiattavik;;;;;;;;;;;;;
 PROV59;Mistissini;;;;;;;;;;;;;
 PROV2140;Haxöl Iihom;;;;;;;;;;;;;
 PROV2137;Cuquieratzi;;;;;;;;;;;;;
@@ -1388,13 +1388,19 @@ PROV4041;Columbus;;;;;;;;;;;;;
 PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4044;Maquawautaw;;;;;;;;;;;;;
+PROV4045;Mattagami;;;;;;;;;;;;;
 PROV4046;Grand Portage;;;;;;;;;;;;;
 PROV4047;Auassat Kapmehenhiht;;;;;;;;;;;;;
+PROV4048;Kapuskasing;;;;;;;;;;;;;
+PROV4049;Fort Paskoya;;;;;;;;;;;;;
 PROV4050;Fort Nez Percés;;;;;;;;;;;;;
 PROV4051;Fort Okanogan;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
+PROV4053;Minithayinikam;;;;;;;;;;;;;
+PROV4054;Tataskwayak;;;;;;;;;;;;;
 PROV4055;Sahpeech;;;;;;;;;;;;;
 PROV4056;Chasmú Okáhmi;;;;;;;;;;;;;
+PROV4057;Akwâkopîwi;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
 PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
 PROV4061;Yritila;;;;;;;;;;;;;
@@ -1416,6 +1422,9 @@ PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
 PROV4095;Fort Kamloops;;;;;;;;;;;;;
+PROV4096;Ayapaskawiyiniwak;;;;;;;;;;;;;
+PROV4097;Neyaashiing;;;;;;;;;;;;;
+PROV4098;Rat Portage;;;;;;;;;;;;;
 PROV4099;Sihasapa;;;;;;;;;;;;;
 PROV4100;Phanhkéska;;;;;;;;;;;;;
 PROV4101;Beesowu;;;;;;;;;;;;;
