--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8664,13 +8664,13 @@ PROV11;Tlhicho;Tlhicho;Tlhicho;;Tlhicho;;;;;;;;;
 PROV15;Ts'msyen;Ts'msyen;Ts'msyen;;Ts'msyen;;;;;;;;;
 PROV16;Wet'suwet'en;Wet'suwet'en;Wet'suwet'en;;Wet'suwet'en;;;;;;;;;
 PROV30;Regina;Regina;Regina;;Regina;;;;;;;;;
-PROV37;Churchill;Churchill;Churchill;;Churchill;;;;;;;;;
-PROV38;Indian Lakes;Indian Lakes;Indian Lakes;;Indian Lakes;;;;;;;;;
+PROV37;Kisêmâtâwa;Kisêmâtâwa;Kisêmâtâwa;;Kisêmâtâwa;;;;;;;;;
+PROV38;T'esheúlitúé;T'esheúlitúé;T'esheúlitúé;;T'esheúlitúé;;;;;;;;;
 PROV39;Norway House;Norway House;Norway House;;Norway House;;;;;;;;;
 PROV46;Toronto;Toronto;Toronto;;Toronto;;;;;;;;;
-PROV47;Fort Severn;Fort Severn;Fort Severn;;Fuerte Severn;;;;;;;;;
+PROV47;Winisk;Winisk;Winisk;;Winisk;;;;;;;;;
 PROV48;Fort Albany;Fort Albany;Fort Albany;;Fuerte Albany;;;;;;;;;
-PROV50;Thunder Bay;Thunder Bay;Thunder Bay;;Bahía de Thunder;;;;;;;;;
+PROV50;Zagaakwaan;Zagaakwaan;Zagaakwaan;;Zagaakwaan;;;;;;;;;
 PROV51;Sault Ste Marie;Sault Ste Marie;Sault Ste Marie;;Sault Ste Marie;;;;;;;;;
 PROV53;Barrie;Barrie;Barrie;;Barrie;;;;;;;;;
 PROV54;Windsor;Windsor;Windsor;;Windsor;;;;;;;;;
@@ -8725,7 +8725,7 @@ PROV150;Kansas City;Kansas City;Kansas City;;Kansas City;;;;;;;;;
 PROV151;Maxúshga;Maxúshga;Maxúshga;;Maxúshga;;;;;;;;;
 PROV152;Oskeluste;Oskeluste;Oskeluste;;Oskeluste;;;;;;;;;
 PROV153;Kutawakpá;Kutawakpá;Kutawakpá;;Kutawakpá;;;;;;;;;
-PROV154;Sioux City;Sioux City;Sioux City;;Sioux City;;;;;;;;;
+PROV154;Nunalla;Nunalla;Nunalla;;Nunalla;;;;;;;;;
 PROV159;Mahnahwauk;Mahnahwauk;Mahnahwauk;;Mahnahwauk;;;;;;;;;
 PROV161;Waasa;Waasa;Waasa;;Waasa;;;;;;;;;
 PROV162;Madison;Madison;Madison;;Madison;;;;;;;;;
@@ -10689,10 +10689,10 @@ PROV2579;Truk;Truk;Truk;;Truk;;;;;;;;;
 PROV2583;Cetinje;Cetinje;Cetinje;;Cetinje;;;;;;;;;
 PROV2587;Kóla;Kóla;Kóla;;Kóla;;;;;;;;;
 PROV2588;Onega;Onega;Onega;;Onega;;;;;;;;;
-PROV2592;Fort Chimo;Fort Chimo;Fort Chimo;;Fort Chimo;;;;;;;;;
+PROV2592;Ivujivik;Ivujivik;Ivujivik;;Ivujivik;;;;;;;;;
 PROV2593;Fort George;Fort George;Fort George;;Fort George;;;;;;;;;
 PROV2596;Qamani'tuaq;Qamani'tuaq;Qamani'tuaq;;Qamani'tuaq;;;;;;;;;
-PROV2597;Fort Vermilion;Fort Vermilion;Fort Vermilion;;Fort Vermilion;;;;;;;;;
+PROV2597;Xewónst'e;Xewónst'e;Xewónst'e;;Xewónst'e;;;;;;;;;
 PROV2598;Echaot'l Koe;Echaot'l Koe;Echaot'l Koe;;Echaot'l Koe;;;;;;;;;
 PROV2600;Altamira;Altamira;Altamira;;Altamira;;;;;;;;;
 PROV2602;Roebourne;Roebourne;Roebourne;;Roebourne;;;;;;;;;
